# libdpp

./: .clang-format  .gitignore  CMakeLists.txt
include/: c_selector.hpp  fwddefs.hpp  kernels.h  l_selection.hpp  libdpp_c.h  results.hpp
java/: build.gradle  pom.xml
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/ws/eiennohito/jdpp/: CMatrix.java  CSelector.java  DppException.java  VectorFiller.java
java/src/main/java/ws/eiennohito/jdpp/bridj/: LibDpp.java
java/src/test/java/ws/eiennohito/jdpp/: CSelectorTest.java
java/src/test/java/ws/eiennohito/jdpp/bridj/: LibDppTest.java
mmap_sample/: CMakeLists.txt  full_kernel.cpp  sample.cpp
perf/: CMakeLists.txt  measure_eigen.cpp  measure_eigen.hpp  perf_common.hpp  perf_run.cpp
src/: CMakeLists.txt  c_kernel.cpp  c_kernel.hpp  c_selection_impl.hpp  c_selector.cpp  common.hpp  kernels.cpp  l_kernel.cpp  l_kernel.hpp  l_selection.cpp  l_selection_impl.hpp  libdpp_c.cpp  results.cpp  selector_base.hpp
test/: CMakeLists.txt  capi_c_kernel.cpp  kernels.cpp  main.cpp  selection_probability.cpp  selections.cpp
word_similarity/: CMakeLists.txt  main.cpp
